syntax = "proto3";
package accountState;
option go_package = "/proto";

message AccountState {
    bytes Address = 1;
    bytes LastHash = 2;
    bytes Balance = 3;
    bytes PendingBalance = 4;
    SmartContractInfo SmartContractInfo = 5;
    bytes StorageRoot = 6;
    bytes LogsHash = 7;
}

enum FEETYPE {
    USER_CHARGE_FEE = 0;
    SMART_CONTRACT_CHARGE_FEE = 1;
}  

message SmartContractInfo {
    bytes CreatorPublicKey = 1;
    FEETYPE FeeType = 2; //0:none,  1: user, 2: smartContract
    string StorageHost = 3; // host that store smart contract state of account
    bytes CodeHash = 4; // hash of smart contract state
    repeated bytes RelatedAddresses = 5; // address of smart contract relate to this smart contract, use for parrallel execute
}

message SmartContractState {
    bytes Code = 1;
    map<string,bytes> Storage = 2;
}
